# archery-person

./: Auths.ipynb  Cookies.ipynb  Persons.ipynb  README.md  Secrets.ipynb  Tests.ipynb  pyproject.toml
archery_person/: __init__.py  auths.py  cookies.py  exceptions.py  persons.py  secrets.py
