[tool.poetry]
name = "archery-person"
version = "0.1.0"
description = "Authorization and session."
authors = ["Enio Climaco Sales Junior <eniocsjunior@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/archeryhq/archery-person"
repository = "https://github.com/archeryhq/archery-person"
documentation = "https://github.com/archeryhq/archery-person/blob/main/README.md"
keywords = [
    "Authorization",
    "Session"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.17.0"
archery-secret = {git = "https://github.com/archeryhq/archery-secret.git", rev = "main"}
archery-cookie = {git = "https://github.com/archeryhq/archery-cookie.git", rev = "main"}
archery-auth = {git = "https://github.com/archeryhq/archery-auth.git", rev = "main"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
